Endpoints for get a route theme by id and get all the route themes were implemented (#23)